--- a/public/css/users.css
+++ b/public/css/users.css
@@ -5,7 +5,7 @@
 }
 
 #header-main {
-  height: 525px;
+  height: 500px;
 }
 
 #header-main h2{
@@ -49,18 +49,22 @@
 
 .pager{
   font-weight: bold;
-  margin-top: 10px;
   float: right;
 }
 
 .pager-button{
     transition: color .5s ease;
     margin-right: 10px;
+    font-size: 20px;
 }
 
 .pager-button:hover{
   cursor: pointer;
   color: rgba(69,170,255,.9);
+}
+
+.user-info{
+  overflow-wrap: break-word;
 }
 
 .animate-user-row-enter {
@@ -82,6 +86,69 @@
 }
 
 
+/* loader
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.loader:before,
+.loader:after,
+.loader {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+  margin: 8em auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 3.5em;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em #4e58df;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0 #4e58df;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em #4e58df;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0 #4e58df;
+  }
+}
+
+
+/* Responsiveness
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 /******************************************** Smaller than 1024 **************************************************************/
 @media screen and (max-width: 1024px) {
 
@@ -95,14 +162,16 @@
 /********************************************* Smaller than 767 *************************************************************/
 @media screen and (max-width:767px) {
   #header-main {
-    height: 468px;
+    height: 400px;
   }
 }
 
 /********************************************** Smaller than 675 ************************************************************/
 @media screen and (max-width:675px) {
-  #header-main {
-    height: 455px;
+  .pager{
+    margin-top: 0px;
+    float: left;
+    margin-left: -25px;
   }
 }
 
@@ -115,5 +184,20 @@
   #header-main h2{
     font-weight: lighter;
     letter-spacing: .1px;
+  }
+
+  .pager{
+    margin-top: 0px;
+    float: left;
+    margin-left: -40px;
+  }
+}
+
+/********************************************** Smaller than 550 ************************************************************/
+@media screen and (max-width:550px) {
+  .pager{
+    margin-top: -10px;
+    float: left;
+    margin-left: 0px;
   }
 }
